--- a/Library.Portal/Views/_ViewImports.cshtml
+++ b/Library.Portal/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Library.Portal
 @using Library.Portal.Models
 @using Library.Domain.Dto.Interfaces;
+@using Library.Domain.Dto;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
