--- a/Library.Portal/Views/Gender/Delete.cshtml
+++ b/Library.Portal/Views/Gender/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Library.Domain.Dto.Interfaces.IGenderDto
+﻿@model IGenderDto
 
 @{
     ViewData["Title"] = "Delete";
@@ -10,20 +10,20 @@
 <div>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Id)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Id)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.GenderType)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.GenderType)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
