--- a/Library.Portal/Views/Shared/_Layout.cshtml
+++ b/Library.Portal/Views/Shared/_Layout.cshtml
@@ -34,6 +34,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Gender" asp-action="Index">Gender</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Language" asp-action="Index">Language</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Author" asp-action="Index">Author</a>
+                        </li>
                     </ul>
                 </div>
             </div>
